# ante

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
scripts/: docx-smoke.mts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.omc/sessions/: 7c58e950-bcb7-46c7-b9f2-5b86824110fa.json
src-tauri/.omc/state/: mission-state.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  errors.rs  lib.rs  main.rs
src-tauri/src/ai/: anthropic.rs  openai.rs  provider.rs
src/lib/: types.ts
src/lib/editor/: AnteImage.ts  Editor.svelte  FontSize.ts  GhostCompletion.ts  ImageResizeOverlay.svelte  IndentExtension.ts  PaginationPlugin.ts  extensions.ts  prose-keymap.ts  theme.ts
src/lib/io/: docx.ts
src/lib/state/: app-state.svelte.ts  file-ops.ts  recent-files.svelte.ts  theme.ts
src/lib/ui/: AiSetupBanner.svelte  AiStatusDot.svelte  FileExplorer.svelte  FileTreeNode.svelte  FindBar.svelte  PageStack.svelte  SettingsDialog.svelte  StatusBar.svelte  Toolbar.svelte  WelcomeScreen.svelte
src/routes/: +layout.svelte  +page.svelte
